[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/Niveau_4.gd" type="Script" id=1]
[ext_resource path="res://graphisme/fond 2.png" type="Texture" id=2]
[ext_resource path="res://graphisme/hub.png" type="Texture" id=3]
[ext_resource path="res://graphisme/moove.png" type="Texture" id=4]
[ext_resource path="res://graphisme/porte_gauche.png" type="Texture" id=5]
[ext_resource path="res://graphisme/updownbuton.png" type="Texture" id=6]
[ext_resource path="res://graphisme/Fkey3.png" type="Texture" id=7]
[ext_resource path="res://graphisme/Inventaire.png" type="Texture" id=8]
[ext_resource path="res://graphisme/Fkey1.png" type="Texture" id=9]
[ext_resource path="res://graphisme/Fkey2.png" type="Texture" id=10]
[ext_resource path="res://graphisme/Fkey4.png" type="Texture" id=11]

[node name="Niveau_4" type="Node" index="0"]

script = ExtResource( 1 )

[node name="fond" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 511.932, 298.841 )
scale = Vector2( 1.67476, 1.97308 )
texture = ExtResource( 2 )

[node name="hub" type="Sprite" parent="." index="1"]

position = Vector2( 514.039, 299.973 )
scale = Vector2( 1.50538, 1.50017 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 610.0
margin_top = 258.0
margin_right = 732.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="moove" type="Sprite" parent="." index="3"]

position = Vector2( 670.607, 488.184 )
rotation = -1.5708
scale = Vector2( 1.32647, 1.20791 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Graphisme" type="Node" parent="." index="4"]

[node name="porte_gauche2" type="Sprite" parent="Graphisme" index="0"]

visible = false
position = Vector2( 496.565, 330.283 )
scale = Vector2( 0.232329, 0.3715 )
texture = ExtResource( 5 )

[node name="porte_gauche" type="Sprite" parent="Graphisme" index="1"]

visible = false
position = Vector2( 196.122, 426.468 )
texture = ExtResource( 5 )

[node name="updownbuton" type="Sprite" parent="Graphisme" index="2"]

visible = false
position = Vector2( 640.122, 423.468 )
scale = Vector2( 1.33333, 1.36364 )
texture = ExtResource( 6 )

[node name="E1" type="Sprite" parent="Graphisme" index="3"]

visible = false
position = Vector2( 699, 290.511 )
texture = ExtResource( 7 )

[node name="E2" type="Sprite" parent="Graphisme" index="4"]

visible = false
position = Vector2( 591.302, 163.789 )
rotation = -2.44346
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="E3" type="Sprite" parent="Graphisme" index="5"]

visible = false
position = Vector2( 583.546, 333.318 )
rotation = -0.785398
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="E4" type="Sprite" parent="Graphisme" index="6"]

visible = false
position = Vector2( 311.186, 166.233 )
rotation = 3.31613
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="E5" type="Sprite" parent="Graphisme" index="7"]

visible = false
position = Vector2( 464.427, 473.917 )
scale = Vector2( 1.95388, 1.75913 )
texture = ExtResource( 7 )

[node name="Interaction" type="Node" parent="." index="5"]

[node name="Upbuton" type="Button" parent="Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 614.0
margin_top = 410.0
margin_right = 634.0
margin_bottom = 438.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Downbuton" type="Button" parent="Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_top = 411.0
margin_right = 665.0
margin_bottom = 437.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Key" type="Button" parent="Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 433.0
margin_top = 452.0
margin_right = 494.0
margin_bottom = 501.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Partir" type="Button" parent="Interaction" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_top = 342.0
margin_right = 227.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Ressource" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="Inventaire" type="Sprite" parent="Ressource" index="0"]

position = Vector2( 926.144, 37.1969 )
texture = ExtResource( 8 )

[node name="Fkey1" type="Sprite" parent="Ressource" index="1"]

position = Vector2( 851.125, 34.5474 )
scale = Vector2( 1.31792, 1.14062 )
texture = ExtResource( 9 )

[node name="Fkey2" type="Sprite" parent="Ressource" index="2"]

position = Vector2( 880.45, 34.3577 )
scale = Vector2( 1.20438, 1.08661 )
texture = ExtResource( 10 )

[node name="Fkey3" type="Sprite" parent="Ressource" index="3"]

visible = false
position = Vector2( 926.963, 39.2358 )
scale = Vector2( 1.41484, 1.15475 )
texture = ExtResource( 7 )

[node name="Fkey4" type="Sprite" parent="Ressource" index="4"]

position = Vector2( 981.453, 38.6818 )
scale = Vector2( 1.58952, 1.10438 )
texture = ExtResource( 11 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Interaction/Upbuton" to="." method="_on_Upbuton_pressed"]

[connection signal="pressed" from="Interaction/Downbuton" to="." method="_on_Downbuton_pressed"]

[connection signal="pressed" from="Interaction/Key" to="." method="_on_Key_pressed"]

[connection signal="pressed" from="Interaction/Partir" to="." method="_on_Partir_pressed"]


